--- a/result.html
+++ b/result.html
@@ -10,6 +10,6 @@
     <p>{{ question }}</p>
     
     <h1>Response:</h1>
-    <div>{{ response|safe }}</div>  <!-- Use 'safe' to render HTML -->
+    <div>{{ response|safe }}</div>  
 </body>
 </html>
